Fixed two errors
"cannot import name 'Input' from 'keras.models'" caused by code in line 36;
"cannot reindex on an axis with duplicate labels" caused by code in line 2578.

--- a/weather-analysis.ipynb
+++ b/weather-analysis.ipynb
@@ -33,8 +33,8 @@
     "from tensorflow import keras\n",
     "\n",
     "# Deep learning \n",
-    "from keras.models import Input, Model, Sequential\n",
-    "from keras.layers import Dense, Dropout, LSTM, Concatenate, SimpleRNN, Masking, Flatten\n",
+    "from keras.models import Model, Sequential\n",
+    "from keras.layers import Input, Dense, Dropout, LSTM, Concatenate, SimpleRNN, Masking, Flatten\n",
     "from keras import losses\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.initializers import RandomNormal"
@@ -2572,6 +2572,7 @@
     "        pd.DataFrame({'day': range(len(y)), 'temp': yhat, 'type': 'forecast'})\n",
     "    ])\n",
     "    \n",
+    "    frame=frame.reset_index(drop = True)",
     "    frame['temp'] = [(x * train_std['temp']) + train_mean['temp'] for x in frame['temp']]\n",
     "    \n",
     "    sns.lineplot(x='day', y='temp', ax = axes[i // 2, i % 2], data=frame, hue='type', marker='o')\n",
