--- a/weather-analysis.ipynb
+++ b/weather-analysis.ipynb
@@ -33,8 +33,8 @@
     "from tensorflow import keras\n",
     "\n",
     "# Deep learning \n",
-    "from keras.models import Input, Model, Sequential\n",
-    "from keras.layers import Dense, Dropout, LSTM, Concatenate, SimpleRNN, Masking, Flatten\n",
+    "from keras.models import Model, Sequential\n",
+    "from keras.layers import Input, Dense, Dropout, LSTM, Concatenate, SimpleRNN, Masking, Flatten\n",
     "from keras import losses\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.initializers import RandomNormal"
@@ -2571,6 +2571,8 @@
     "        pd.DataFrame({'day': range(len(y)), 'temp': y, 'type': 'original'}),\n",
     "        pd.DataFrame({'day': range(len(y)), 'temp': yhat, 'type': 'forecast'})\n",
     "    ])\n",
+    "    \n",
+    "    frame=frame.reset_index(drop = True)\n",
     "    \n",
     "    frame['temp'] = [(x * train_std['temp']) + train_mean['temp'] for x in frame['temp']]\n",
     "    \n",
